# mcp-multiplex

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  NOTICE  PUBLICATION.md  PUBLIC_RELEASE_NOTES.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: ACCEPTANCE_TEST_PLAN.md  ARCHITECTURE.md  CONTROL_PLANE_STATUS.md  IMPLEMENTATION_BLUEPRINT.md  MXP_CLI.md  PRD.md  PRD_SAGA_CHECKLIST_ROADMAP.md  PUBLIC_READINESS_AUDIT.md  RELEASE.md  ROADMAP.md  SCHEMAS_AND_CONTRACTS.md
docs/certifications/: README.md  TASK-038-codex-certification.md  TASK-039-claude-code-certification.md  TASK-040-gemini-certification.md  TASK-041-cline-certification.md  TASK-042-opencode-certification.md
scripts/: scrub_sdist_dotfiles.py
src/mcp_multiplex/: __init__.py  __main__.py  config.py  health.py
src/mcp_multiplex/adapters/: __init__.py  _headers.py  claude_code.py  cline.py  codex.py  discovery.py  gemini.py  opencode.py  registry.py
src/mcp_multiplex/apply/: __init__.py
src/mcp_multiplex/approvals/: __init__.py
src/mcp_multiplex/auth/: __init__.py
src/mcp_multiplex/catalog/: __init__.py  candidates.py  legacy_import.py  matching.py
src/mcp_multiplex/certification/: __init__.py  claude_code.py  cline.py  codex.py  gemini.py  opencode.py
tests/: __init__.py  test_agent_registry.py  test_approvals.py  test_atomic_apply.py  test_audit_events.py  test_auth.py  test_auto_apply.py  test_candidate_staging.py  test_catalog_matching.py  test_catalog_store.py  test_claude_code_adapter.py  test_cli_operator.py  test_cline_adapter.py  test_codex_adapter.py  test_codex_certification.py  test_config.py  test_config_audit.py  test_config_discovery.py  test_control_mcp.py  test_control_plane_install.py  test_credentials.py  test_daemon_service.py  test_gemini_adapter.py  test_health.py  test_legacy_catalog_import.py  test_migrations.py  test_opencode_adapter.py  test_release_gate.py  test_remediation_planning.py  test_runtime_frontend.py  test_scaffold.py  test_schema_models.py  test_security.py  test_tui.py  test_watchers.py
tests/acceptance/: README.md
tests/fixtures/agents/: README.md
(+64 files in other folders)
